--- a/.vtide.yml
+++ b/.vtide.yml
@@ -1,10 +1,18 @@
---- 
+---
 count: 4
 default:
   restart: 0
   wait: 0
 name: watch-do
 terminals:
+  1a:
+    command: ./Build && ./Build testcover
+    restart: 1
+    wait: 0
+    watch:
+      - lib
+      - bin
+      - tests
   2:
     edit:
       - bin/watch-do
